<resources>
    <string name="app_name">NiroFirebaseNew</string>
    <string name="txt_name">Enter Your Name</string>
    <string name="txt_id">Enter Your ID</string>
    <string name="txt_address">Enter Your Address</string>
    <string name="txt_contactNo">Enter Your Contact Number</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_show">SHOW</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_delete">DELETE</string>
</resources>
