<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EtID"
        android:layout_width="342dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:hint="@string/txt_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EtName"
        android:layout_width="342dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:hint="@string/txt_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtID" />

    <EditText
        android:id="@+id/EtConNo"
        android:layout_width="342dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:hint="@string/txt_contactNo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtAddress" />

    <EditText
        android:id="@+id/EtAddress"
        android:layout_width="342dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:hint="@string/txt_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtName" />

    <Button
        android:id="@+id/BtnSave"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:onClick="onclick"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toStartOf="@+id/BtnShow"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtConNo" />

    <Button
        android:id="@+id/BtnShow"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="41dp"
        android:onClick="onclick1"
        android:text="@string/btn_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtConNo" />

    <Button
        android:id="@+id/BtnDelete"
        style="@style/Base.Animation.AppCompat.DropDownUp"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:onClick="onclick3"
        android:text="@string/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnShow" />

    <Button
        android:id="@+id/BtnUpdate"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="42dp"
        android:onClick="onclick2"
        android:text="@string/btn_update"
        app:layout_constraintEnd_toStartOf="@+id/BtnDelete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnSave" />
</androidx.constraintlayout.widget.ConstraintLayout>